@@ -104,6 +104,10 @@ Working version
 
 ### Build system:
 
+- #11???: Use native symlinks on Windows for the OCaml installation, reducing
+  disk usage considerably.
+  (David Allsopp, review by ???)
+
 ### Bug fixes:
 
 - #11302, #11412: `ocamlc` and `ocamlopt` should not remove generated files
